--- a/public/stylesheets/chatStyle.css
+++ b/public/stylesheets/chatStyle.css
@@ -29,25 +29,26 @@ h1 {
 }
 
 div#change_username, section#input_zone {
-    border: 5px outset #8258FA;
+    border:10px outset blue;
 }
 
 div#change_username {
     height: 3%;
     display: inline-block;
-    background-color: #BCA9F5;
+    background-color: #0000b3;
 }
 
 section#chatroom {
-    border: 5px inset #8258FA;
-    height: 85%;
+    border: 5px inset #0000b3;
+    height: 300px;
+    	
     overflow: auto;
 }
 
 section#input_zone {
     height: 7%;
     text-align: center;
-    background-color: #BCA9F5;
+    background-color: #0000b3;
 }
 
 .vertical-align {
@@ -64,7 +65,7 @@ input#username {
 
 input#message {
     display: inline-block;
-    width: 88%;
+    width: 87%;
     height: 70%;
     font-family: 'Comfortaa', sans-serif;
     font-size: 2vh;
@@ -79,10 +80,11 @@ button#send_message {
 p.message {
     margin: 0px;
     width: 100%;
-    height: 40px;
+    height: 50px;
     font-size: 2vh;
     font-family: 'Comfortaa', sans-serif;
     padding: 1vh;
+	
 }
 
 .message:nth-child(even) {
