--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -4,7 +4,7 @@
     <link href="http://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" type="text/css">
         
 <header>
-      <h1>Super Chat</h1>
+      <h1>Live Chat</h1>
     </header>
 
     <section>
