--- a/views/index.hbs
+++ b/views/index.hbs
@@ -51,18 +51,41 @@
 
 		</div><!-- /row -->
 	</div><!-- /container -->
-	
-	
-	
-	<div class="container">
-		<div class="row mt centered">
-			<div class="col-lg-6 col-lg-offset-3">
-				<h1>Live Score.</h1>
-				<h3>Do some work ffs dave</h3>
-			</div>
-		</div><!-- /row -->
-	
+
+
 			
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+
+ <link rel='stylesheet' href='/stylesheets/chatStyle.css' >
+<meta http-equiv="Content-Type" const="text/html;charset=UTF-8" />
+    <link href="http://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" type="text/css">
+    <br>    
+    
+
+    <section>
+      <div id="change_username">
+	<input id="username" type="text" />
+	<button id="send_username" type="button">Change username</button>
+      </div>
+    </section>
+
+  <div id = "chat" style = "background : #b3ecff">
+
+    <section id="chatroom">
+      <section id="feedback"></section>
+    </section>
+
+    
+
+    <section id="input_zone"> 
+      <input id="message"  type="text" />
+      <button id="send_message"  type="button">Send</button>
+    </section>
+
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="javascripts/chat.js"></script>
+	</div>
+
+
 		<p class="centered">Created by Pied Piper</p>
 	</div><!-- /container -->
