--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -56,18 +56,25 @@
               
     
            <li><div class="dropdown">
-  <button class="dropbtn">Upcoming Matches</button>
+  <button class="dropbtn">Fixtures</button>
   <div class="dropdown-content">
     <a href="/premFixtures">Premiership</a>
     <a href= "/championshipFixtures">Championship</a>
     <a href="/leagueOneFixtures">League 1</a>
       <a href="/leagueTwoFixtures">League 2</a>
   </div></li>
-            <li><a href="/users/login">Already a member?</a></li>
+               <li><div class="dropdown">
+  <button class="dropbtn">Standings</button>
+  <div class="dropdown-content">
+    <a href="/premLeaderboard">Premiership</a>
+    <a href= "/champLeaderboard">Championship</a>
+    <a href="/leagueOneLeaderboard">League 1</a>
+      <a href="/leagueTwoLeaderboard">League 2</a>
+  </div></li>
+           
              <li><a href="/feed">Feeds</a></li>
-              <li><a href="/users/register">Sign Up?</a></li>
               <li><a href="/about">About us</a></li>
-              <li><a href="/chat">Live Chat</a></li>
+              <li><a href="/users/login">Sign in</a></li>
               <li><a href="#" id="logout">Logout</a></li>
           </ul>
         </div>
