--- a/views/about.hbs
+++ b/views/about.hbs
@@ -2,7 +2,7 @@
     
 <div class="container">
 		<div class="row mt centered">
-                 <body background = "/images/backgroundAboutUs.jfif">
+                 <body background = "/images/bg_floodlights.jpg">
 			<div class="col-lg-6 col-lg-offset-3">
 				<h1>Our Awesome Team.<br/>Design Lovers.</h1>
 				<h3>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h3>
@@ -14,21 +14,21 @@
 				<img class="img-circle" src="/images/David.jpg" width="140" alt="">
 				<h4>David Tubridy</h4>
 				<p>In charge of API</p>
-                <p><i class="glyphicon glyphicon-send" style = "color:white"></i> <i class="glyphicon glyphicon-phone" style = "color:white"></i> <a href = "https://www.facebook.com/david.tubridy"><i class="glyphicon glyphicon-globe" style = "color:white" ></i></a></p>
+                <p><i class="glyphicon glyphicon-send" style = "color:black"></i> <i class="glyphicon glyphicon-phone" style = "color:black"></i> <a href = "https://www.facebook.com/david.tubridy"><i class="glyphicon glyphicon-globe" style = "color:black" ></i></a></p>
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
 				<img class="img-circle" src="/images/jordan.jpg" width="140" alt="">
 				<h4>Jordan Coyne</h4>
 				<p>Front End</p>
-				<p><i class="glyphicon glyphicon-send" style = "color:white"></i> <i class="glyphicon glyphicon-phone" style = "color:white"></i> <i class="glyphicon glyphicon-globe" style = "color:white"></i></p>
+				<p><i class="glyphicon glyphicon-send" style = "color:black"></i> <i class="glyphicon glyphicon-phone" style = "color:black"></i> <i class="glyphicon glyphicon-globe" style = "color:black"></i></p>
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
 				<img class="img-circle" src="/images/Eamonn.jpg" width="140" alt="">
 				<h4>Eamonn Fox</h4>
 				<p>In charge of database</p>
-				<p><i class="glyphicon glyphicon-send" style = "color:white"></i> <i class="glyphicon glyphicon-phone" style = "color:white"></i> <i class="glyphicon glyphicon-globe" style = "color:white"></i></p>
+				<p><i class="glyphicon glyphicon-send" style = "color:black"></i> <i class="glyphicon glyphicon-phone" style = "color:black"></i> <i class="glyphicon glyphicon-globe" style = "color:black"></i></p>
             </div><!--/col-lg-4 -->
             </div><!-- /row -->
         <div class="row mt centered">
@@ -36,14 +36,14 @@
 				<img class="img-circle" src="/images/Davin.jpg" width="140" alt="">
 				<h4>Davin O'Brien</h4>
 				<p>Front end</p>
-				<p><i class="glyphicon glyphicon-send" style = "color:white"></i> <i class="glyphicon glyphicon-phone" style = "color:white"></i> <i class="glyphicon glyphicon-globe" style = "color:white"></i></p>
+				<p><i class="glyphicon glyphicon-send" style = "color:black"></i> <i class="glyphicon glyphicon-phone" style = "color:black"></i> <i class="glyphicon glyphicon-globe" style = "color:black"></i></p>
           </div><!--/col-lg-4 -->
             
             <div class="col-lg-4">
 				<img class="img-circle" src="/images/Jack.jpg" width="140" alt="">
 				<h4>Jack Sheehan</h4>
 				<p>Javascript</p>
-				<p><i class="glyphicon glyphicon-fire" style = "color:white"></i> <i class="glyphicon glyphicon-phone" style = "color:white"></i> <i class="glyphicon glyphicon-globe" style = "color:white"></i></p>
+				<p><i class="glyphicon glyphicon-send" style = "color:black"></i> <i class="glyphicon glyphicon-phone" style = "color:black"></i> <i class="glyphicon glyphicon-globe" style = "color:black"></i></p>
 			</div><!--/col-lg-4 -->
 		</div><!-- /row -->
 	</div><!-- /container -->
