--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,7 +7,7 @@
         <div class="form-group mt">
             <div class="col-sm-10 col-sm-offset-2">
             <div class="col-sm-3">
-                <label for="inputUsername" style= "color : white" class="control-label">Username</label>  
+                <label for="inputUsername" style= "color : black" class="control-label">Username</label>  
             </div>
             <div class="col-sm-9">
                 <input type="text" class="form-control input-lg required" id="inputUsername" placeholder="@username">
@@ -17,7 +17,7 @@
         <div class="form-group">
             <div class="col-sm-10 col-sm-offset-2">
             <div class="col-sm-3">
-                <label for="inputPassword" style= "color : white" class="control-label">Password</label>
+                <label for="inputPassword" style= "color : black" class="control-label">Password</label>
             </div>
             <div class="col-sm-9">
                 <input type="password" class="form-control input-lg required" id="inputPassword"
@@ -41,7 +41,7 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
   
   <body>
-    
+    <br>
     <script src="https://apis.google.com/js/platform.js" async defer></script><script>
       function onSignIn(googleUser) {
         // Useful data for your client-side scripts:
@@ -58,6 +58,45 @@
         console.log("ID Token: " + id_token);
       };
     </script>
+
+<h2>Not a member?</h2>
+<p>Sign up here.</p>
+
+<div class="col-md-8 col-md-offset-2">
+    
+    <form class="form-horizontal" role="form" id="reg-form">
+        <body background = "/images/bg_floodlights.jpg">
+        <div class="form-group mt">
+            <div class="col-sm-10 col-sm-offset-2">
+            <div class="col-sm-3">
+                <label for="inputUsername" class="control-label" style = "color:black">Username</label>
+            </div>
+            <div class="col-sm-9">
+                <input type="text" class="form-control input-lg required" id="inputUsername" placeholder="@username">
+            </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-10 col-sm-offset-2">
+            <div class="col-sm-3">
+                <label for="inputPassword" class="control-label"style = "color:black">Password</label>
+            </div>
+            <div class="col-sm-9">
+                <input type="password" class="form-control input-lg required" id="inputPassword"
+                       placeholder="Password">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="row col-sm-offset-2 col-sm-10 mt">
+                <button type="submit" class="btn btn-warning btn-lg">Create Account</button>
+            </div>
+        </div>
+    </form>
+</div>
+
+
+
+
   </body>
 </html>
     </form>
