--- a/views/premFixtures.hbs
+++ b/views/premFixtures.hbs
@@ -2,6 +2,7 @@
 <head>
 
 <meta charset = "UTF-8">
+<link href="/stylesheets/bootstrap.css" rel="stylesheet">
 <link href="/stylesheets/fixturesTables.css" rel="stylesheet">
 </head>
 
