--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,7 +27,7 @@
      <body background = "/images/bg_floodlights.jpg">
 		
 		<div>
-			<div class="col-lg-4">
+			<div class="col-lg-1">
  <img src="/images/PremierLogo.png" class = "circle">
  <img src="/images/PremierLogo.png" class = "circle">
  <img src="/images/PremierLogo.png" class = "circle">
@@ -79,7 +79,7 @@
       <button id="send_message"  type="button">Send</button>
  
     </section>
-
+$("#mydiv").scrollTop($("#mydiv")[0].scrollHeight);
 <script>var objDiv = document.getElementById("chatroom");
 objDiv.scrollTop = objDiv.scrollHeight;</script>
 
