--- a/views/login.hbs
+++ b/views/login.hbs
@@ -24,13 +24,12 @@
                        placeholder="Password">
             </div>
         </div>
-        <div class="form-group">
-            <div class="row col-sm-offset-2 col-sm-10 mt" style="padding-left:10%">
-                <button type="submit"  class="btn btn-warning btn-lg">Sign In</button>
-            
-            <div class="g-signin2 row col-sm-2" data-onsuccess="onSignIn" style="padding-left:10%; padding-top: 7px"></div>
+        <div class="form-group" style="padding-top:60px">
+            <div class="row col-sm-10" style="padding-left:30%; padding-right:0%">
+                <button type="submit"  class="btn btn-warning btn-lg" >Sign In</button></div>
+            <div class="g-signin2 row col-sm-2" data-onsuccess="onSignIn" style="padding-right:20%; padding-left:0%; padding-top: 7px"></div>
                  
-            </div>
+            
             
             
         </div>
