changed home page and added leagues

--- a/public/stylesheets/fixturesTables.css
+++ b/public/stylesheets/fixturesTables.css
@@ -11,6 +11,7 @@
 }
  
  tr:nth-child(even){background-color: #f2f2f2;}
+ tr:nth-child(odd){background-color: #ffffff;}
 
  tr:hover {background-color: #ddd;}
 
