--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,49 +1,78 @@
 
-<div id="headerwrap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-				<form class="form-inline" role="form">
-					</form>					
-				</div><!-- /col-lg-6 -->
-				<div class="col-lg-6">
-				</div><!-- /col-lg-6 -->
-				
-			</div><!-- /row -->
-		</div><!-- /container -->
-	</div><!-- /headerwrap -->
- 
-	<div class="container">
-		<div class="row mt centered">
-			<div class="col-lg-6 col-lg-offset-3">
-                        <br>
-                        
-				<h1>Welcome to Pipe Piper<br/>+1</h1>
-                                <br>
-				
-			</div>
-		</div><!-- /row -->
+<head>
+    
+  <link href="/stylesheets/particles.css" rel="stylesheet"  type="text/css">
+    </head>
 
-     <body background = "/images/bg_floodlights.jpg">
+
+
+
+    <div id="particles-js" >
+        <div id="intro">
+            <h20>Pied Piper</h20>
+            
+    </div>
+    
+    
+
+    
 		
-		<div>
-			<div class="col-lg-1">
- <img src="/images/PremierLogo.png" class = "circle">
- <img src="/images/PremierLogo.png" class = "circle">
- <img src="/images/PremierLogo.png" class = "circle">
- <img src="/images/PremierLogo.png" class = "circle">
-                </a>
-			</div><!--/col-lg-4 -->
-			<div class="col-lg-4">
-                </a>
+            
+            </div>
+<body background = "/images/silver_bg.jpg">
+		
+    <div style = "padding-bottom:25%; padding-top:1%; ">
+            
+        <div class="row mt centered" >
+			<div class="col-lg-1" style="padding-left:8%; padding-bottom:2%; padding-right:12%; width:10px">
+            <a href="/premFixtures"><img src="/images/Prem_logo_white.png" class = "circle"style= "width:250px; height:200px"></a>
 			</div>
-
-              <div class="col-lg-4">
-                </a>
+         
+            <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
+            <a href="/premFixtures"><img src="/images/EFL_Championship.svg.png" class = "circle"style= "width:200px; height:200px"></a>
 			</div>
+            
+            <div class="col-lg-1" style="padding-left:8%;padding-bottom:4%; padding-right:8%">
+            <a href="/premFixtures"><img src="/images/League_One.png" class = "circle"style= "width:200px; height:200px"></a>
+			</div>
+            
+            <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
+            <a href="/premFixtures"><img src="/images/League_Two.png" class = "circle"style= "width:200px; height:200px"></a>
+			</div>
+            
+            <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
+            <a href="/premFixtures"><img src="/images/Logo Bundesliga.png" class = "circle"style= "width:250px; height:220px"></a>
+			</div>
+        </div><!-- /row -->
+        
+        <div class="row mt centered" >
+			<div class="col-lg-1" style="padding-left:8%; padding-bottom:2%; padding-right:12%; width:10px">
+            <a href="/premFixtures"><img src="/images/La Liga.png" class = "circle"style= "width:250px; height:200px"></a>
+			</div>
+         
+            <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
+            <a href="/premFixtures"><img src="/images/Serie A.png" class = "circle"style= "width:200px; height:200px"></a>
+			</div>
+            
+            <div class="col-lg-1" style="padding-left:8%;padding-bottom:4%; padding-right:8%">
+            <a href="/premFixtures"><img src="/images/eredivisie.png" class = "circle"style= "width:200px; height:200px"></a>
+			</div>
+            
+            <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
+            <a href="/premFixtures"><img src="/images/portugal.png" class = "circle"style= "width:200px; height:200px"></a>
+			</div>
+            
+            <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
+            <a href="/premFixtures"><img src="/images/Ligue1.png" class = "circle"style= "width:250px; height:220px"></a>
+			</div>
+        </div><!-- /row -->
+            
+            
 
-		</div><!-- /row -->
-	</div><!-- /container -->
+              
+
+		
+	
 
 
 			
@@ -53,7 +82,7 @@
 <meta http-equiv="Content-Type" const="text/html;charset=UTF-8" />
     <link href="http://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" type="text/css">
     <br> 
-    <h1> Live Chat</h1>   
+    <p20> Live Chat</p20>   
     
 
     <section>
@@ -82,7 +111,9 @@
     </section>
 
 
-
+ <script src="/javascripts/particles.js"></script>
+    <script src="/javascripts/particles.min.js"></script>
+    <script src="/javascripts/particlesapp.js"></script>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script>var d = $('#chatroom');
 d.scrollTop(d.prop("scrollHeight"));</script>
