--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -62,6 +62,12 @@
     <a href= "/championshipFixtures">Championship</a>
     <a href="/leagueOneFixtures">League 1</a>
       <a href="/leagueTwoFixtures">League 2</a>
+      <a href="/laLigaFixtures">La Liga</a>
+      <a href="/SerieAfixtures">Serie A</a>
+      <a href="/bundesligaFixtures">Bundesliga</a>
+      <a href="/ligaPortugalFixtures">Liga Portugal</a>
+      <a href="/eredivisieFixtures">Eredivisie</a>
+      <a href="/ligue1Fixtures">Ligue 1</a>
   </div></li>
                <li><div class="dropdown">
   <button class="dropbtn">Standings</button>
@@ -70,6 +76,12 @@
     <a href= "/champLeaderboard">Championship</a>
     <a href="/leagueOneLeaderboard">League 1</a>
       <a href="/leagueTwoLeaderboard">League 2</a>
+      <a href="/laLigaLeaderboard">La Liga</a>
+      <a href="/SerieALeaderboard">Serie A</a>
+      <a href="/bundesligaLeaderboard">Bundesliga</a>
+      <a href="/ligaPortugalLeaderboard">Liga Portugal</a>
+      <a href="/eredivisieLeaderboard">Eredivisie</a>
+      <a href="/ligue1Leaderboard">Ligue 1</a>
   </div></li>
            
              <li><a href="/feed">Feeds</a></li>
