--- a/views/Test.hbs
+++ b/views/Test.hbs
@@ -1,15 +1,23 @@
-<div class = "container"> <script type='text/javascript' src='/javascripts/particle.js'></script>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    particleground(document.getElementById('particleground'), {
-      dotColor: '#ffffff',
-      lineColor: '#ffffff',
-      particleRadius: 0
-    });
-    var intro = document.getElementById('intro');
-    intro.style.marginTop = -intro.offsetHeight / 2 + 'px';
-  }, false);
-    </script></div>
-
-
+<html>
+<head>
+    <title></title>
+  <link href="/stylesheets/particle.css" rel="stylesheet"  type="text/css">
+    </head>
+<body>
+    
+    <div id = "headerwrap">
+        <div class="container">
+    <div id="particles-js"></div>
+    </div>
+    </div>
+    
+    
+    
+    
+    
+    
+    <script src="/javascripts/particles.js"></script>
+    <script src="/javascripts/particles.min.js"></script>
+    <script src="/javascripts/particlesapp.js"></script>
+    </body>
+</html>
