fixed wrong links

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,41 +29,41 @@
 			</div>
          
             <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
-            <a href="/premFixtures"><img src="/images/EFL_Championship.svg.png" class = "circle"style= "width:200px; height:200px"></a>
+            <a href="/championshipFixtures"><img src="/images/EFL_Championship.svg.png" class = "circle"style= "width:200px; height:200px"></a>
 			</div>
             
             <div class="col-lg-1" style="padding-left:8%;padding-bottom:4%; padding-right:8%">
-            <a href="/premFixtures"><img src="/images/League_One.png" class = "circle"style= "width:200px; height:200px"></a>
+            <a href="/leagueOneFixtures"><img src="/images/League_One.png" class = "circle"style= "width:200px; height:200px"></a>
 			</div>
             
             <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
-            <a href="/premFixtures"><img src="/images/League_Two.png" class = "circle"style= "width:200px; height:200px"></a>
+            <a href="/leagueTwoFixtures"><img src="/images/League_Two.png" class = "circle"style= "width:200px; height:200px"></a>
 			</div>
             
             <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
-            <a href="/premFixtures"><img src="/images/Logo Bundesliga.png" class = "circle"style= "width:250px; height:220px"></a>
+            <a href="/bundesligaFixtures"><img src="/images/Logo Bundesliga.png" class = "circle"style= "width:250px; height:220px"></a>
 			</div>
         </div><!-- /row -->
         
         <div class="row mt centered" >
 			<div class="col-lg-1" style="padding-left:8%; padding-bottom:2%; padding-right:12%; width:10px">
-            <a href="/premFixtures"><img src="/images/La Liga.png" class = "circle"style= "width:250px; height:200px"></a>
+            <a href="/laLigaFixtures"><img src="/images/La Liga.png" class = "circle"style= "width:250px; height:200px"></a>
 			</div>
          
             <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
-            <a href="/premFixtures"><img src="/images/Serie A.png" class = "circle"style= "width:200px; height:200px"></a>
+            <a href="/SerieAfixtures"><img src="/images/Serie A.png" class = "circle"style= "width:200px; height:200px"></a>
 			</div>
             
             <div class="col-lg-1" style="padding-left:8%;padding-bottom:4%; padding-right:8%">
-            <a href="/premFixtures"><img src="/images/eredivisie.png" class = "circle"style= "width:200px; height:200px"></a>
+            <a href="/eredivisieFixtures"><img src="/images/eredivisie.png" class = "circle"style= "width:200px; height:200px"></a>
 			</div>
             
             <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
-            <a href="/premFixtures"><img src="/images/portugal.png" class = "circle"style= "width:200px; height:200px"></a>
+            <a href="/ligaPortugalFixtures"><img src="/images/portugal.png" class = "circle"style= "width:200px; height:200px"></a>
 			</div>
             
             <div class="col-lg-1" style="padding-left:8%;padding-bottom:2%; padding-right:8%">
-            <a href="/premFixtures"><img src="/images/Ligue1.png" class = "circle"style= "width:250px; height:220px"></a>
+            <a href="/ligue1Fixtures"><img src="/images/Ligue1.png" class = "circle"style= "width:250px; height:220px"></a>
 			</div>
         </div><!-- /row -->
             
