--- a/views/about.hbs
+++ b/views/about.hbs
@@ -46,4 +46,35 @@
 				<p><i class="glyphicon glyphicon-send" style = "color:black"></i> <i class="glyphicon glyphicon-phone" style = "color:black"></i> <i class="glyphicon glyphicon-globe" style = "color:black"></i></p>
 			</div><!--/col-lg-4 -->
 		</div><!-- /row -->
-	</div><!-- /container -->
+		</div><!-- /container -->
+		
+		
+		
+		
+		<div class="container" align = "center">
+				<div class="row mt centered">
+					<form id="contactform" class="form-vertical" action="https:formspree.io/tubbs@live.ie" method="post">
+						
+						<div class ="form-group" align = "center">
+							<label for="user-name" >Name:</label>
+								<input type="text" class="form-control" id="target1" name="user-name" placeholder="Enter your name" required="">
+						</div>
+					  
+						<div class="form-group" align = "center">
+							<label for="user-email" >Email:</label>
+								<input type="text" class="form-control" id="target2" name="user-email" placeholder="Enter your email address" required="">
+						</div>
+
+						<div class="from-group" align = "center">
+							<label for="user-email" >Message:</label>
+								<input type="text"  class="form-control" id="target3" name="user-message" placeholder="Enter your message here" required="">
+						</div>
+						
+						<div class="form-group" align = "center">
+								<input type ="submit" id="Send" class="btn btn-warning btn-lg" value="Send">
+						</div>
+					 </form>
+				</div>
+			</div>
+		
+		
