--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -14,10 +14,12 @@
       </div>
     </section>
 
-    <section id="chatroom">
+	<div id="msg-con">
+    <div id="chatroom">
       <section id="feedback"></section>
-    </section>
-
+	</div>
+    </div>
+	
     
 
     <section id="input_zone"> 
