--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,16 +12,20 @@
             <h20>Pied Piper</h20>
             
     </div>
-    
-    
-
-    
-		
+    	
             
             </div>
-<body background = "/images/silver_bg.jpg">
-		
-    <div style = "padding-bottom:25%; padding-top:1%; ">
+
+<body background = "/images/silver_bg.jpg"> 
+
+    <br>		
+    <h1 align="center">Fixtures</h1>
+    <center>
+    <a href = "#Bot">Click here for live chat<a>
+    </center>
+    
+    
+    <div>
             
         <div class="row mt centered" >
 			<div class="col-lg-1" style="padding-left:8%; padding-bottom:2%; padding-right:12%; width:10px">
@@ -82,7 +86,7 @@
 <meta http-equiv="Content-Type" const="text/html;charset=UTF-8" />
     <link href="http://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" type="text/css">
     <br> 
-    <p20> Live Chat</p20>   
+     <h1 align="center">Live Chat</h1>   
     
 
     <section>
@@ -101,9 +105,6 @@
       <section id="feedback"></section>
     </div>
  
-
-
-
     <section id="input_zone"> 
       <input id="message"  type="text" />
       <button id="send_message"  type="button">Send</button>
@@ -119,7 +120,7 @@
 d.scrollTop(d.prop("scrollHeight"));</script>
     <script src="javascripts/chat.js"></script>
 	</div>
-
+      <a name ="Bot">
 
 		<p class="centered">Created by Pied Piper</p>
 	</div><!-- /container -->
