--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,7 +34,7 @@
   </head>
 
 
-
+    <script>(function(){var ticker=document.createElement('script');ticker.async=true;ticker.src='https://embed.twitcker.com/ticker/PiedPiperScores.js';(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(ticker);})();</script>
       <!-- Load jQuery -->
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 
@@ -53,7 +53,22 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-              
+           
+
+<li><div class="dropdown">
+  <button class="dropbtn">Scores</button>
+  <div class="dropdown-content">
+    <a href="/premScores">Premiership</a>
+    <a href= "/chamScores">Championship</a>
+    <a href="/league1Scores">League 1</a>
+      <a href="/league2Scores">League 2</a>
+      <a href="/laLigaScores">La Liga</a>
+      <a href="/serieAScores">Serie A</a>
+      <a href="/bundScores">Bundesliga</a>
+      <a href="/portugalScores">Liga Portugal</a>
+      <a href="/eredScores">Eredivisie</a>
+      <a href="/ligue1Scores">Ligue 1</a>
+  </div></li>		   
     
            <li><div class="dropdown">
   <button class="dropbtn">Fixtures</button>
@@ -84,9 +99,11 @@
       <a href="/ligue1Leaderboard">Ligue 1</a>
   </div></li>
            
-             <li><a href="/feed">Feeds</a></li>
-              <li><a href="/about">About us</a></li>
+              <li><a href="/feed">Feeds</a></li>
+               
+              <li><a href="/about">About us/ Help</a></li>
               <li><a href="/users/login">Sign in</a></li>
+              
               <li><a href="#" id="logout">Logout</a></li>
           </ul>
         </div>
