--- a/public/stylesheets/chatStyle.css
+++ b/public/stylesheets/chatStyle.css
@@ -6,7 +6,7 @@
   transform: translateY(-50%);
 }
 
-$('section#chatroom').scrollTop($('section#chatroom')[0].scrollHeight);
+
 
 * {
     box-sizing: border-box;
@@ -28,29 +28,34 @@ header {
 h1 {
     font-family: 'Comfortaa', sans-serif;
     margin: 0px;
-}
+} 
 
 div#change_username, section#input_zone {
-    border:10px outset #99ff99;
+	
+    border:10px outset #009900;
 }
 
 div#change_username {
-    height: 3%;
+		width: 100%;
+    height: 1%;
     display: inline-block;
-    background-color: #99ff99;
+    background-color: #003e00;
 }
 
-#chatroom {
-    border: 5px inset #99ff99;
+div#chatroom {
+	background-image: url('/images/pg_bg.jpg');
+    border: 5px inset #009900;
     height: 300px;
-    	
-    overflow: scroll;
+    overflow: auto;	
+    
 }
+
+
 
 section#input_zone {
-    height: 7%;
+	    height: 7%;
     text-align: center;
-    background-color: #99ff99;
+    background-color:#003e00;
 }
 
 .vertical-align {
@@ -90,10 +95,10 @@ p.message {
 }
 
 .message:nth-child(even) {
-    background-color: #e6ffe6;
+    background-color: #5cd65c;
 }
 
 .message:nth-child(odd) {
-    background-color:#ccffcc;
+    background-color:#80ff80;
 }
 
