--- a/views/feed.hbs
+++ b/views/feed.hbs
@@ -1,3 +1,23 @@
+
+<link href="/stylesheets/particles.css" rel="stylesheet"  type="text/css">
+    </head>
+
+
+
+
+    <div id="particles-js" >
+        <div id="intro">
+            <h20>Pied Piper</h20>
+            
+    </div>
+    	
+            
+            </div>
+<br>
+<script src="/javascripts/particles.js"></script>
+    <script src="/javascripts/particles.min.js"></script>
+    <script src="/javascripts/particlesapp.js"></script>
+
 <div class="well col-xs-6 col-xs-offset-3">
     <div class="row col-xs-10 col-xs-offset-1">
         <form class="form-horizontal" role="form" id="postForm">
@@ -10,7 +30,7 @@
                 </div>
             </div>
 
-              <body background = "/images/bg_floodlights.jpg">
+              <body background = "/images/silver_bg.jpg"> 
 
             <div class="form-group">
                 <div class="col-xs-3">
