--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,8 +1,29 @@
+
+<link href="/stylesheets/particles.css" rel="stylesheet"  type="text/css">
+    </head>
+
+
+
+
+    <div id="particles-js" >
+        <div id="intro">
+            <h20>Pied Piper</h20>
+            
+    </div>
+    	
+            
+            </div>
+
+
+<script src="/javascripts/particles.js"></script>
+    <script src="/javascripts/particles.min.js"></script>
+    <script src="/javascripts/particlesapp.js"></script>
+
 <div class="col-md-8 col-md-offset-2">
     <h2>Login</h2>
     <form class="form-horizontal" role="form" id="log-form">
      
-        <body background = "/images/bg_floodlights.jpg">
+        <body background = "/images/silver_bg.jpg">
 
         <div class="form-group mt">
             <div class="col-sm-10 col-sm-offset-2">
@@ -24,10 +45,11 @@
                        placeholder="Password">
             </div>
         </div>
-        <div class="form-group" style="padding-top:60px">
-            <div class="row col-sm-10" style="padding-left:30%; padding-right:0%">
+        <div class="form-group">
+            <div class="row col-sm-offset-6 col-sm-2 mt" >
+
                 <button type="submit"  class="btn btn-warning btn-lg" >Sign In</button></div>
-            <div class="g-signin2 row col-sm-2" data-onsuccess="onSignIn" style="padding-right:20%; padding-left:0%; padding-top: 7px"></div>
+            <div class="g-signin2 row col-sm-2" data-onsuccess="onSignIn" style=" padding-top: 47px  "></div>
                  
             
             
@@ -61,10 +83,10 @@
 <h2>Not a member?</h2>
 <p>Sign up here.</p>
 
-<div class="col-md-8 col-md-offset-2">
+<div>
     
     <form class="form-horizontal" role="form" id="reg-form">
-        <body background = "/images/bg_floodlights.jpg">
+        
         <div class="form-group mt">
             <div class="col-sm-10 col-sm-offset-2">
             <div class="col-sm-3">
@@ -75,19 +97,19 @@
             </div>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" >
             <div class="col-sm-10 col-sm-offset-2">
             <div class="col-sm-3">
                 <label for="inputPassword" class="control-label"style = "color:black">Password</label>
             </div>
-            <div class="col-sm-9">
-                <input type="password" class="form-control input-lg required" id="inputPassword"
+            <div class="col-sm-9"  >
+                <input type="password" class="form-control input-lg required"  id="inputPassword"
                        placeholder="Password">
             </div>
         </div>
-        <div class="form-group">
-            <div class="row col-sm-offset-2 col-sm-10 mt">
-                <button type="submit" class="btn btn-warning btn-lg">Create Account</button>
+        <div class="form-group" style = "padding-right:27px">
+            <div class="row col-sm-offset-6 col-sm-2 mt" >
+                <button type="submit" class="btn btn-warning btn-lg" >Create Account</button>
             </div>
         </div>
     </form>
