few small changes

--- a/views/leaderboard/SerieALeaderboard.hbs
+++ b/views/leaderboard/SerieALeaderboard.hbs
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <div>
     <div id="particles-js" >
         <div id="intro">
             <h20>Serie A Standings</h20>
@@ -13,7 +14,8 @@
     </div>
     </div>
     <div id="showData"></div>
-
+    <p class="centered">Created by Pied Piper</p>
+    </div>
 <script>
 $.ajax({
   headers: { 'X-Auth-Token': '68bbe376c46e411d809b01d6dc549797' },
