--- a/views/leaderboard/bundesligaLeaderboard.hbs
+++ b/views/leaderboard/bundesligaLeaderboard.hbs
@@ -6,13 +6,15 @@
 </head>
 
 <body>
-    <div id="particles-js" >
+    <div><div id="particles-js" >
         <div id="intro">
             <h20>Bundesliga Standings</h20>
             
     </div>
     </div>
     <div id="showData"></div>
+        <p class="centered">Created by Pied Piper</p>
+    </div>
 
 <script>
 $.ajax({
