--- a/views/leaderboard/eredivisieLeaderboard.hbs
+++ b/views/leaderboard/eredivisieLeaderboard.hbs
@@ -6,13 +6,16 @@
 </head>
 
 <body>
-    <div id="particles-js" >
+    <div>
+        <div id="particles-js" >
         <div id="intro">
             <h20>Eredivisie Standings</h20>
             
     </div>
     </div>
     <div id="showData"></div>
+    <p class="centered">Created by Pied Piper</p>
+    </div>
 
 <script>
 $.ajax({
