--- a/views/leaderboard/laLigaLeaderboard.hbs
+++ b/views/leaderboard/laLigaLeaderboard.hbs
@@ -6,13 +6,18 @@
 </head>
 
 <body>
+    <div>
     <div id="particles-js" >
         <div id="intro">
             <h20>La Liga Standings</h20>
             
     </div>
     </div>
-    <div id="showData"></div>
+    <div id="showData">
+    
+    </div>
+    <p class="centered">Created by Pied Piper</p>
+    </div>
 
 <script>
 $.ajax({
