--- a/views/login.hbs
+++ b/views/login.hbs
@@ -49,7 +49,7 @@
             <div class="row col-sm-offset-6 col-sm-2 mt" >
 
                 <button type="submit"  class="btn btn-warning btn-lg" >Sign In</button></div>
-            <div class="g-signin2 row col-sm-2" data-onsuccess="onSignIn" style=" padding-top: 47px  "></div>
+            <div class="g-signin2 row col-sm-3" data-onsuccess="onSignIn" style=" padding-top: 47px  "></div>
                  
             
             
@@ -63,22 +63,7 @@
   
   <body>
     <br>
-    <script src="https://apis.google.com/js/platform.js" async defer></script><script>
-      function onSignIn(googleUser) {
-        // Useful data for your client-side scripts:
-        var profile = googleUser.getBasicProfile();
-        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        console.log('Full Name: ' + profile.getName());
-        console.log('Given Name: ' + profile.getGivenName());
-        console.log('Family Name: ' + profile.getFamilyName());
-        console.log("Image URL: " + profile.getImageUrl());
-        console.log("Email: " + profile.getEmail());
-
-        // The ID token you need to pass to your backend:
-        var id_token = googleUser.getAuthResponse().id_token;
-        console.log("ID Token: " + id_token);
-      };
-    </script>
+   
 
 <h2>Not a member?</h2>
 <p>Sign up here.</p>
@@ -112,6 +97,44 @@
                 <button type="submit" class="btn btn-warning btn-lg" >Create Account</button>
             </div>
         </div>
+            <script src="https://apis.google.com/js/platform.js" async defer></script><script>
+      function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
+
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+      };
+    </script>
+    <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '{2075984179321974}',
+      cookie     : true,
+      xfbml      : true,
+      version    : '{latest-api-version}'
+    });
+      
+    FB.AppEvents.logPageView();   
+      
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
     </form>
 </div>
 
