--- a/views/about.hbs
+++ b/views/about.hbs
@@ -21,7 +21,7 @@
 		<div class="row mt centered">
                  <body background = "/images/silver_bg.jpg">
 			<div class="col-lg-6 col-lg-offset-3">
-				<h1>Our Design Team.</h1>
+				<h1>Our Team</h1>
                                 <h2>Aims to bring you live updates on a range of games 24/7.<h2>
 							</div>
 		</div><!-- /row -->
